<resources>
    <string name="app_name">WalkingGroup</string>

    <!--Hardcode your API key like this. Don't use this test one!-->
    <string name="apikey">394ECE0B-5BF9-41C4-B9F6-261B07678ED23</string>

    <string name="title_activity_maps">Map</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>

    <string name="add_new_users">Add New Users</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">LOGIN</string>
    <string name="et_password">Password</string>
    <string name="btn_log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="for_develope">FOR DEVELOPE</string>
    <string name="maps">MAPS</string>
    <string name="my_group">My Group</string>

    <!--Group activity-->
    <string name="create_new_group">New Group</string>
    <string name="group_description">Description:</string>
    <string name="meet_place">Meet Place:</string>
    <string name="destination">Destination:</string>
    <string name="create">CREATE</string>


    <string name="dev"><![CDATA[Dev ]]></string>
    <string name="log_out">Log out</string>
    <string name="monitor">Monitor</string>
    <string name="monitored_by">Monitored by</string>
    <string name="add">Add</string>
    <string name="monitoring">Monitoring</string>
    <string name="back">Back</string>
    <string name="new_user">New User</string>
    <string name="list_users">List Users</string>
    <string name="launch_get_api_key">Launch Get API Key</string>
    <string name="get_user_by_email">Get User By Email</string>
    <string name="get_user_by_id">Get User By Id</string>
    <string name="to_login">To Login</string>
    <string name="you_should_set_the_api_key_in_strings_xml">You should set the API key in strings.xml.</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="create_group">CREATE GROUP</string>
    <string name="do_you_want_to_create_a_group">Do you want to create a group?</string>
    <string name="groups">Groups</string>
    <string name="i_am_a_leader_of">Leader of</string>
    <string name="test">test</string>
    <string name="i_am_a_member_of">Member of</string>
    <string name="long_click_to_view_more_information_about_users">Long click to view more info</string>
    <string name="click_from_main">Click to stop monitoring.</string>
    <string name="click_for_join">Click to join the selected group.</string>
    <string name="group_information">Group Information</string>
    <string name="group_members">Group members:</string>
    <string name="click_to_view_more_group_information">Click to view more group information.</string>
    <string name="long_click_to_leave_the_group">Long click to leave the group.</string>
    <string name="click_member_infoActivity">Click to remove the user from the group.</string>
    <string name="whom_do_you_want_to_have_join_the_selected_group">Whom do you want to have join the selected group?</string>
    <string name="myself">Myself</string>
    <string name="my_child">My Child</string>
    <string name="delete_this_group">Delete this group</string>
    <string name="show_walking_groups">Show Walking Groups.</string>
    <string name="hide_walking_groups">Hide Walking Groups.</string>
    <string name="select_meet_place">Please select the meeting place! To clear the selected places, press pencil button</string>
    <string name="different_place">Meeting Place should be different with End Place</string>
    <string name="clear_selected_place">To clear selected places, press pencil button.</string>
    <string name="create_group_select">To create a group, please select a place specific first</string>
    <string name="yellow_marker">Start from yellow maker,Press yellow markers to join the group.</string>
    <string name="unable_get_location">unable to get current location</string>
    <string name="red_blue_marker">To create the group click the red marker, to join the group, press the blue marker.</string>
    <string name="map_is_ready">Map is Ready</string>
    <string name="click_to_stop_being_monitored">Click to stop being monitored.</string>
    <string name="message_dialog">MessageDialog</string>
    <string name="Group_">Group -</string>
    <string name="leave_success">Leave the group Successfully</string>
    <string name="cant_make_map">We can\'t make map requests</string>
    <string name="log_out_success">Log out success</string>
    <string name="replied">Server replied with user:</string>
    <string name="list">Got list of</string>
    <string name="logcat">users! See logcat.</string>
    <string name="user_information">User Information</string>
    <string name="birth_year">Birth Year:</string>
    <string name="birth_month">Birth Month:</string>
    <string name="address">Address:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="home_phone">Home Phone:</string>
    <string name="grade">Grade:</string>
    <string name="teacher_name">Teacher Name:</string>
    <string name="emergency_contact_info">Emergency Contact Info:</string>
    <string name="edit">Edit</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="long_click_to_view_users_parents">Long click to view users\' parents.</string>
    <string name="click_to_view_monitors_personal_information">Click to view monitors\' personal information.</string>
    <string name="stop_update">Stop Update</string>
    <string name="start_update">Start Update</string>
    <string name="parent_s_dashboard">Parent\'s Dashboard</string>
    <string name="messages">Messages</string>
    <string name="my_info">My Info</string>
    <string name="panic">Panic</string>
    <string name="choose_one_group_or_all">Choose one group or All</string>
    <string name="click_to_send">click to send</string>
    <string name="new_messages">New Messages</string>
    <string name="send_to_parents_and_group_leaders">Send To Parents and Group leaders</string>
    <string name="send_to_group">Send to Group</string>
    <string name="send_all">Send All</string>
    <string name="read">Read</string>
    <string name="new_message">New Message</string>
    <string name="click_to_view">click to view</string>
    <string name="press_to_mark_as_unread">Press to mark as unread</string>
    <string name="delete_all">Delete ALL</string>
    <string name="from">From:</string>
    <string name="content">Content:</string>
    <string name="delete">Delete</string>
    <string name="no_unread">No Unread</string>
    <string name="unread">Unread</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="help">Help!!!!!</string>
    <string name="send">Send</string>
    <string name="send_directly_with_the_hint">SEND DIRECTLY WITH THE HINT</string>
    <string name="editing_user_s_own_email_causes_logging_in_again">Editing user\'s own email causes logging in again.</string>
    <string name="leader_board">Leader Board</string>
    <string name="reward">Reward</string>
    <string name="use_my_points">USE MY POINTS:</string>
    <string name="total_points">TOTAL POINTS:</string>
    <string name="ranking">Ranking</string>
    <string name="points_shown">Points shown</string>
    <string name="background">Background</string>
    <string name="points">Points</string>
    <string name="customize_background">Customize Background</string>
    <string name="reward_has_been_earned">The reward has already been earned!</string>
    <string name="not_enough_points">Not enough points!</string>
    <string name="transfer_leader">Transfer Leader</string>
    <string name="click_a_member_to_tranfer_leader">Click a Member to Tranfer Leader</string>
    <string name="permission">Permission</string>
    <string name="pending">PENDING</string>
    <string name="approved">Approved</string>
    <string name="denied">DENIED</string>
    <string name="status">Status:</string>
    <string name="deny">DENY</string>
    <string name="approve">APPROVE</string>
    <string name="year_limit">The birth year should between 1900 and 2018.</string>
    <string name="month_limit">The month you entered does not exist.</string>
    <string name="transfer_request_made">Transfer Request Made</string>
    <string name="latlng">LatLng:</string>
    <string name="arrive_target_place">Arrive Target Place!</string>
    <string name="points_">Points:</string>
    <string name="start_update_location">Start update location!</string>
    <string name="stop_update_location">Stop update location!</string>
    <string name="emergency_">Emergency:</string>
    <string name="help_emergency">HELP!!!!!</string>
    <string name="emergency_message_sent">Emergency Message Sent</string>
    <string name="message_sent">Message Sent</string>
    <string name="message_can_not_be_empty">Message can not be empty</string>
    <string name="by">BY</string>
    <string name="approved_success">Approved Success</string>
    <string name="denied_success">Denied Success</string>
    <string name="title">Title</string>

    //toast
    <string name="requestSend">Request Send</string>
    <string name="regSuccess">Register Success. Please login</string>
</resources>
