<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="ca.cmpt276.walkinggroup.app.MessagesEmergencyActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:text="@string/emergency_message"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editEmergencyMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:width="300dp"
        android:ems="10"
        android:hint="@string/help"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/btnSendEmergencyMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="196dp"
        android:background="@drawable/background_button"
        android:padding="10dp"
        android:text="@string/send"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btnEmergencyMsgCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:background="@drawable/background_button"
        android:text="@string/cancel"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="257dp"
        android:text="@string/send_directly_with_the_hint"
        android:textColor="@android:color/holo_orange_light" />


</RelativeLayout>