<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingRight="0dp"
    tools:context="ca.cmpt276.walkinggroup.app.GroupCreateActivity">

    <TextView
        android:id="@+id/txtNewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_new_group"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:text="@string/destination"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewGroup" />

    <TextView
        android:id="@+id/txtMeetPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:text="@string/meet_place"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDestination" />


    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:text="@string/group_description"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMeetPlace" />


    <TextView
        android:id="@+id/editDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtDestination"
        app:layout_constraintTop_toBottomOf="@+id/txtNewGroup" />

    <EditText
        android:id="@+id/editMeetPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:width="200dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:textColor="#FFF"
        app:layout_constraintStart_toEndOf="@+id/txtMeetPlace"
        app:layout_constraintTop_toBottomOf="@+id/editDestination" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:width="200dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:textColor="#FFF"
        app:layout_constraintStart_toEndOf="@+id/txtDescription"
        app:layout_constraintTop_toBottomOf="@+id/editMeetPlace" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/background_button"
        android:text="@string/ok"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/background_button"
        android:text="@string/cancel"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />


</android.support.constraint.ConstraintLayout>
